chapter_istio-ambient-mode/networking/L7-authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: layer7-authz
  labels:
    content: layer7-authz
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: handson
  action: DENY
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/curl
    to:
    - operation:
        methods:
        - POST
        - PUT
        - PATCH
        - DELETE
        ports:
        - "8080"
